--- a/index.html
+++ b/index.html
@@ -1,102 +1,42 @@
 <!DOCTYPE html>
 <html>
-<title>BlockLearn</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
-<link rel="stylesheet" href="http://www.w3schools.com/lib/w3-theme-black.css">
-<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
+	<title>Welcome to BlockLearn</title>
+	<meta name="Welcome to BlockLearn" content="width=device-width, initial-scale=1">
+	<script type="text/javascript" src="generic.js"></script>
+	<link rel="stylesheet" href="template.css">
 <body>
+	<span id = "container">
+		<header>
+			<h1 class="title animate-bottom">BlockLearn</h1>
+		</header>
 
-<!-- Header -->
-<header class="w3-container w3-theme w3-padding" id="myHeader">
-  <div class="w3-center">
-  <h1 class="w3-xxxlarge w3-animate-bottom">BlockLearn</h1>
-    <div class="w3-padding-32">
-    </div>
-  </div>
-</header>
-
-  
-<form class="w3-container" action="form.asp">
-
-<h2 class="w3-text-black">Login</h2>
-
-<p>      
-<label class="w3-text-gray"><b>Username</b></label>
-<input class="w3-input w3-border" name="username" type="text"></p>
-
-<p>      
-<label class="w3-text-gray"><b>Password</b></label>
-<input class="w3-input w3-border" name="password" type="text"></p>
-
-<p> <button onclick="location.href='mainpage.html';"><a href= "mainpage.html" style="text-decoration:none">Register</button></a></p>
-
-</form>
-  
-<!-- Script for Sidenav, Tabs, Accordions, Progress bars and slideshows -->
-<script>
-
-// Tabs
-function openCity(evt, cityName) {
-  var i;
-  var x = document.getElementsByClassName("city");
-  for (i = 0; i < x.length; i++) {
-     x[i].style.display = "none";
-  }
-  var activebtn = document.getElementsByClassName("testbtn");
-  for (i = 0; i < x.length; i++) {
-     activebtn[i].classList.remove("w3-dark-grey");
-  }
-  document.getElementById(cityName).style.display = "block";
-  evt.currentTarget.classList.add("w3-dark-grey");
-}
-
-var mybtn = document.getElementsByClassName("testbtn")[0];
-mybtn.click();
-
-// Accordions
-function myAccFunc(id) {
-    document.getElementById(id).classList.toggle("w3-show");
-    document.getElementById(id).previousElementSibling.classList.toggle("w3-dark-grey");
-}
-
-// Slideshows
-var slideIndex = 1;
-
-function plusDivs(n) {
-slideIndex = slideIndex + n;
-showDivs(slideIndex);
-}
-
-function showDivs(n) {
-  var x = document.getElementsByClassName("mySlides");
-  if (n > x.length) {slideIndex = 1}    
-  if (n < 1) {slideIndex = x.length} ;
-  for (i = 0; i < x.length; i++) {
-     x[i].style.display = "none";  
-  }
-  x[slideIndex-1].style.display = "block";  
-}
-
-showDivs(1);
-
-// Progress Bars
-function move() {
-  var elem = document.getElementById("myBar");   
-  var width = 1;
-  var id = setInterval(frame, 10);
-  function frame() {
-    if (width == 100) {
-      clearInterval(id);
-    } else {
-      width++; 
-      elem.style.width = width + '%'; 
-      document.getElementById("demoprgr").innerHTML = width * 1  + '%';
-    }
-  }
-}
-</script>
-
+		<section>
+			<div id = 'login_temp'>
+				<form>
+					<h2>Login</h2>
+					<label>
+						<b>Username</b>
+					</label>
+					<input name="username" type="text">
+					<br></br>
+					<label>
+						<b>Password</b>
+					</label>
+					<input name="password" type="password">
+					<br></br>
+				</form>
+				<button onclick="window.location.href = 'mainpage.html'">Register</button>
+			</div>
+		</section>
+		
+		<footer>
+			<p id = "fine_print">Note: This extension was created as part of the HackPrinceton Hackathon and is in no way guaranteed to work as
+			expected or intended. This project is for fun and does not promise to make you a genious or even really smart.
+			There will be few updates and even fewer resources on what exactly was supposed to be happening, but feel free
+			to use this as an example or starting point for your own extension projects.</p>
+		</footer>
+	</span>
 </body>
+
 </html>
                                                         
