--- a/mainpage.html
+++ b/mainpage.html
@@ -13,50 +13,46 @@
 <body>
 	<span id = "container">
 		<header>
-			<i onclick="w3_open()" class="fa fa-bars w3-xlarge w3-opennav"></i> 
 			<h1 class="animate-bottom">BlockLearn</h1>
+			
+			<!-- Navbar -->
+			<ul class="topnav">
+				  <li><a href="mainpage.html">Home</a></li>
+				  <li><a href="flashcards.html">Flashcards</a></li>
+				  <li><a href="analytics.html">Analytics</a></li>
+				  <li><a href="settings.html">Settings</a></li>
+				  <li class="icon"><a href="javascript:void(0);" onclick="getNav()">&#9776;</a>
+				</li>
+			</ul>
 		</header>
 
 		<section>
 
-			<!-- Navbar on small screens -->
-			<div id="demo" class="w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:51px">
-			  <ul class="w3-navbar w3-left-align w3-large w3-black">
-				<li><a class="w3-padding-large" href="flashcards.html">Flashcards</a></li>
-				<li><a class="w3-padding-large" href="users.html">User</a></li>
-				<li><a class="w3-padding-large" href="settings.html">Settings</a></li>
-			  </ul>
-			</div>
-
-
 			<div class="w3-row-padding w3-center w3-margin-top">
-			<div class="w3-third">
-			  <div class="w3-card-2 w3-padding-top" style="min-height:460px">
-			  <h4>Block</h4><br>
-			  <i class="fa fa-ban w3-margin-bottom w3-text-theme" style="font-size:120px"></i>
-			  <p>Customize your block list</p>
-			  <p>Waste less time</p>
-			  </div>
-			</div>
+				<div class="w3-third">
+				  <div class="w3-card-2 w3-padding-top" style="min-height:460px">
+				  <h4>Block</h4>
+				  <img alt="Stop Procrastination" height="270vh" width="80%" src = "http://4.bp.blogspot.com/-z8xbqeflhpE/VK2bwKQwmQI/AAAAAAAAAmo/vSyQ3mE7vDU/s1600/prohibido1.gif"/>
+				  <!--<i class="fa fa-ban w3-margin-bottom w3-text-theme" style="font-size:120px"></i>-->
+				  <p>Customize your block list and Waste less time on sites that distract you.</p>
+				  </div>
+				</div>
 
-			<div class="w3-third">
-			  <div class="w3-card-2 w3-padding-top" style="min-height:460px">
-			  <h4>Learn</h4><br>
-			  <i class="fa fa-book w3-margin-bottom w3-text-theme" style="font-size:120px"></i>
-			  <p>Easy-to-use flashcards</p>
-			  <p>Share decks with other users</p>
-			  </div>
-			</div>
+				<div class="w3-third">
+				  <div class="w3-card-2 w3-padding-top" style="min-height:460px">
+				  <h4>Learn</h4>
+				  <img alt="Study More" height="270vh" width="80%" src="https://pixabay.com/static/uploads/photo/2014/09/11/18/32/books-441866_960_720.jpg"/>
+				  <!--<i class="fa fa-book w3-margin-bottom w3-text-theme" style="font-size:120px"></i><p>Share decks with other users!</p>-->
+				  <p>Easy-to-use flashcards made by you and site admins on whatever subject you'd like.</p>
+				  </div>
+				</div>
 
-			<div class="w3-third">
-			  <div class="w3-card-2 w3-padding-top" style="min-height:460px">
-			  <h4>Visualize</h4><br>
-			  <i class="fa fa-line-chart w3-margin-bottom w3-text-theme" style="font-size:120px"></i>
-			  <p>Visualize your time management</p>
-			  <p>View detailed reports</p>
-			  <p>Know your trends</p>
-			  </div>
-			</div>
+				<div class="w3-third w3-card-2 w3-padding-top"style="min-height:460px">
+				  <h4>Visualize</h4>
+				  <img alt="Study More" height="270vh" width="80%" src="https://pixabay.com/static/uploads/photo/2015/08/26/18/20/info-908889_960_720.png"/>
+				  <!--<i class="fa fa-line-chart w3-margin-bottom w3-text-theme" style="font-size:120px"></i>-->
+				  <p>Visualize your time management habits, know your trends and export detailed reports.</p>
+				</div>
 			</div>
 		</section>
 		
