--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
+<head>
 	<title>Welcome to BlockLearn</title>
 	<meta name="Welcome to BlockLearn" content="width=device-width, initial-scale=1">
 	<script type="text/javascript" src="generic.js"></script>
 	<link rel="stylesheet" href="template.css">
+</head>
+
 <body>
 	<span id = "container">
 		<header>
