--- a/mainpage.html
+++ b/mainpage.html
@@ -27,32 +27,36 @@
 		</header>
 
 		<section>
-
-			<div class="w3-row-padding w3-center w3-margin-top">
-				<div class="w3-third">
-				  <div class="w3-card-2 w3-padding-top" style="min-height:460px">
+			<div class="third_column">
+				<div>
 				  <h4>Block</h4>
-				  <img alt="Stop Procrastination" height="270vh" width="80%" src = "http://4.bp.blogspot.com/-z8xbqeflhpE/VK2bwKQwmQI/AAAAAAAAAmo/vSyQ3mE7vDU/s1600/prohibido1.gif"/>
+				  <img alt="Stop Procrastination" src = "http://4.bp.blogspot.com/-z8xbqeflhpE/VK2bwKQwmQI/AAAAAAAAAmo/vSyQ3mE7vDU/s1600/prohibido1.gif"/>
 				  <!--<i class="fa fa-ban w3-margin-bottom w3-text-theme" style="font-size:120px"></i>-->
 				  <p>Customize your block list and Waste less time on sites that distract you.</p>
-				  </div>
 				</div>
 
-				<div class="w3-third">
-				  <div class="w3-card-2 w3-padding-top" style="min-height:460px">
+				<div>
 				  <h4>Learn</h4>
-				  <img alt="Study More" height="270vh" width="80%" src="https://pixabay.com/static/uploads/photo/2014/09/11/18/32/books-441866_960_720.jpg"/>
+				  <img alt="Study More" height="90%" width="80%" src="https://pixabay.com/static/uploads/photo/2014/09/11/18/32/books-441866_960_720.jpg"/>
 				  <!--<i class="fa fa-book w3-margin-bottom w3-text-theme" style="font-size:120px"></i><p>Share decks with other users!</p>-->
 				  <p>Easy-to-use flashcards made by you and site admins on whatever subject you'd like.</p>
-				  </div>
 				</div>
 
-				<div class="w3-third w3-card-2 w3-padding-top"style="min-height:460px">
+				<div>
 				  <h4>Visualize</h4>
-				  <img alt="Study More" height="270vh" width="80%" src="https://pixabay.com/static/uploads/photo/2015/08/26/18/20/info-908889_960_720.png"/>
+				  <img alt="Get the Stats" height="90%" width="80%" src="https://pixabay.com/static/uploads/photo/2015/08/26/18/20/info-908889_960_720.png"/>
 				  <!--<i class="fa fa-line-chart w3-margin-bottom w3-text-theme" style="font-size:120px"></i>-->
 				  <p>Visualize your time management habits, know your trends and export detailed reports.</p>
 				</div>
+			</div>
+			
+			<div>
+				<h3>How this works:</h3>
+				<p>Basically, you select what subject and set of flashcards you would like to use and then you select from
+				 a list of commonly banned sites or add your own. You change the amount of time you want to spend on the web.
+				 When you go to the banned sites beyond the allotted period of time, flashcards will pop up and you will have
+				 to answer them to keep browsing. If you answer all the cards correctly you are able to browse for as long as
+				 you like.</p>
 			</div>
 		</section>
 		
